--- a/characters/style.css
+++ b/characters/style.css
@@ -1,6 +1,34 @@
+* {
+    margin: 0;
+    box-sizing: order-box;
+}
+
+header {
+    display: flex;
+    justify-content: space-around;
+    background-color: palevioletred;
+    padding: 2em 0;
+}
+
+button {
+    font-size: x-large;
+    background-color: orangered;
+    border-radius: .4rem;
+}
+
+button:hover {
+    background-color: forestgreen;
+    transform: scale(1.5);
+    color: yellowgreen;
+/* make button expand */
+}
 main {
     display: flex;
     flex-wrap: wrap;
+}
+
+figure {
+    margin: 4px;
 }
 
 figure img {
