--- a/films/style.css
+++ b/films/style.css
@@ -1,6 +1,8 @@
 /* to do: find cool star wars cursor, custom make star wars logos */
 header {
-    background-color: #EDC9AF;
+    /* background-color: #EDC9AF; */
+    /* background: linear-gradient(to bottom, #ffb6c1, 50%, #EDC9AF) */
+    background-image: linear-gradient(to bottom, salmon, 15%, #EDC9AF, #71a8ba, #000);
     color: #111;
     font-size: xx-large;
     text-align: center;
@@ -8,18 +10,26 @@ header {
     padding: 2rem 2rem;
     text-shadow: 3px 3px 3px #FFD700;
     font-style: oblique;
-}
+    display: flex;
+    justify-content: center;
 
+    
+}
+#double_moons {
+    max-width: 150px;
+    max-height: 150px;
+    margin-right: 20px;
+    margin-top: 20px;
+}
 img {
     max-width: 280px;
 }
-
 
 figure {
     background-color: #FFD700;
 }
 
-img {
+figure img {
     border: 18px solid #EDC9AF;
  
 }
