--- a/characters/style.css
+++ b/characters/style.css
@@ -13,7 +13,7 @@ header {
 button {
     font-size: x-large;
     background-color: orangered;
-    border-radius: .4rem;
+    border-radius: 1.5rem;
 }
 
 button:hover {
@@ -29,8 +29,10 @@ main {
 
 figure {
     margin: 4px;
+    
 }
 
 figure img {
     width: 180px;
+    border: 18px solid #EDC9AF;
 }
