Added Modal, connected images from portfolio as links

--- a/index.css
+++ b/index.css
@@ -65,7 +65,7 @@ a {
     /*background: linear-gradient(to bottom, #000000, 50%, #3d3c3c);*/
     background-color: #3d3c3c;
     height: 100vh;
-    color: #111111;
+    color: #ffffff;
     display: flex;
     flex-direction: column;
     justify-content: center;
