--- a/films/style.css
+++ b/films/style.css
@@ -15,12 +15,22 @@ header {
 
     
 }
+
+#house {
+    max-width: 200px;
+    max-height: 200px;
+    margin-right: 100px;
+    position:absolute;bottom: 475px;
+    position:absolute;left: 50px;
+}
+
 #double_moons {
     max-width: 150px;
     max-height: 150px;
     margin-right: 20px;
     margin-top: 20px;
 }
+
 img {
     max-width: 280px;
 }
