--- a/starships/style.css
+++ b/starships/style.css
@@ -14,12 +14,13 @@ header {
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 0 5%;
-    filter: drop-shadow(10px 10px 4px #A83212);
+    filter: drop-shadow(4px 10px 4px #A83212);
 }
 
-#xWing {
+#xWing, #tieFighter {
     max-height: 70%;
     max-width: 70%;
+    filter: drop-shadow(4px 10px 4px #2F312C)
 }
 
 .mainContainer {
@@ -28,6 +29,7 @@ header {
 }
 
 .nav {
+    margin-top: .3em;
     padding: 1em 1em 1em 2em;
     background-color:#D6DCC1;
     opacity: 0.7;
