--- a/starships/style.css
+++ b/starships/style.css
@@ -29,7 +29,6 @@ header {
 }
 
 .nav {
-    margin-top: .3em;
     padding: 1em 1em 1em 2em;
     background-color:#D6DCC1;
     opacity: 0.7;
@@ -41,7 +40,7 @@ header {
 }
 
 li {
-    color: #A83212;
+    color: #922101;
 }
 
 li:hover {
