upgrade #1 final, updated header background

--- a/films/style.css
+++ b/films/style.css
@@ -9,10 +9,11 @@ header {
     font-style: oblique;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
 
     
 }
+
 
 #double_moons {
     max-width: 150px;
