--- a/characters/style.css
+++ b/characters/style.css
@@ -6,37 +6,41 @@
 header {
     display: flex;
     align-content: center;
-    justify-content: space-around;
-    background-color: #FFD700;
+    justify-content: space-evenly;
+    background-color: #000;
     padding: 2em 2em .5em 2em;
 }
 
 .heading {
     display: flex;
     flex-direction: column;
-    color: #000;
+    color: black;
     font-size: 100px;
     align-items: center;
     justify-content: center;
-    margin-left: 3%;
-    font-family: 'Warnes', cursive;  
+    margin-left: 2%;
+    font-family: 'Warnes', cursive; 
+    -webkit-text-stroke-width: .5px;
+    -webkit-text-stroke-color: #FFD700;
 
 }
-#buttonHeader {
+
+header img {
+    filter: drop-shadow(4px -10px 4px #ffd700);
 }
 
 button {
     font-size: xx-large;
-    background-color:#000;
+    background-color:#FFD700;
     border-radius: 1.5rem;
     font-family: 'Warnes';
-    color: white;
+    color:black;
 }
 
 button:hover {
-    background-color: white;
+    background-color: black;
     transform: scale(1.1);
-    color: black;
+    color: #FFD700;
 /* make button expand */
 }
 main {
@@ -51,7 +55,8 @@ p {
     display: flex;
     text-align: center;
     justify-content: center;
-    background-color: #FFD700;
+    background-color: #000;
+    color: #FFD700;
     font-size: xx-large;
     font-family: monospace;
 }
@@ -79,6 +84,7 @@ figure img:active {
 figcaption {
     color: white;
     text-align: center;
+    margin-top: 1rem;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
