--- a/Congress/style.css
+++ b/Congress/style.css
@@ -3,10 +3,39 @@
     box-sizing: border-box;
 }
 
+header {
+    display: flex;
+    text-align: center;
+    align-content: center;
+    justify-content: space-evenly;
+    background-color: blue;
+    padding: 0em 0em .5em 0em;
+    color: white;
+    font-size: 50px;
+    font-family: 'Estonia', cursive;
+}
+
+main {
+    background-color:red;
+}
+
 .senators {
     display: flex;
     flex-wrap: wrap;
 }
+
+#seniorityHeading {
+    background-color: red;
+    color: white;
+    display: flex;
+    justify-content: center;
+}
+
+ol {
+    text-align: center;
+    background-color: yellow;
+}
+
 
 figure {
     width: 160px;
@@ -16,6 +45,55 @@ figure {
     margin: 1em;
 }
 
+figure img {
+    border: solid 3px blue;
+    filter: drop-shadow(4px -4px 4px black);
+}
+
 figcaption {
     text-align: center;
+    color: white;
+    font-family: 'Nanum Myeongjo', serif;
+    font-family: 'Asap', sans-serif;
+    font-size: small;
 }
+
+.heading {
+    display: flex;
+    flex-direction: column;
+    color: black;
+    font-size: 100px;
+    align-items: center;
+    justify-content: center;
+    margin-left: 2%;
+    font-family: 'Warnes', cursive; 
+    -webkit-text-stroke-width: .5px;
+    -webkit-text-stroke-color: #FFD700;
+
+}
+
+header img {
+    filter: drop-shadow(4px -10px 4px #ffd700);
+}
+
+button {
+    font-size: xx-large;
+    background-color:red;
+    border-radius: 1.5rem;
+    font-family: 'Cinzel', serif;
+    color:white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+
+button:hover {
+    background-color: white;
+    transform: scale(1.1);
+    color: blue;
+
+button
+
+/* make button expand */
