--- a/pokemon/style.css
+++ b/pokemon/style.css
@@ -3,22 +3,37 @@
     box-sizing: border-box;
 }
 
+.pokeGrid {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .scene {
     width: 200px;
     height: 260px;
-    margin: 1em;
+    margin: .7em;
+    perspective: 600px;
 }
 
 .card {
     width: 100%;
     height: 100%;
+    transition: transform 1s;
+    transform-style: preserve-3d;
+    cursor: pointer;
     position: relative;
 }
+    
 
 .cardFace {
     width: 100%;
     height: 100%;
     position: absolute;
+    backface-visibility: hidden;
+}
+
+.card.is-flipped {
+    transform: rotateY(180deg);
 }
 
 .front {
@@ -27,4 +42,10 @@
 
 .back {
     background: #49de94;
+    transform: rotateY(180deg);
+}
+
+figure img {
+    width: 200px;
+
 }
