edited pokebuttons, added D and R buttons

--- a/Congress/style.css
+++ b/Congress/style.css
@@ -64,7 +64,7 @@ figcaption {
     text-align: center;
     color: white;
     font-family: 'Asap', sans-serif;
-    font-size: small;
+    font-size: x-small;
 }
 
 .heading {
