--- a/pokemon/style.css
+++ b/pokemon/style.css
@@ -16,15 +16,15 @@
 }
 
 button {
-    background-color: #FF0000;
-    color: white;
+    background-image: linear-gradient(180deg, red 50%, white 50%);
+    color: black;
     font-family: 'Permanent Marker', cursive;
     font-size: large;
 }
 
 button:hover {
     transform: scale(1.2);
-    background-color: #BB0000;
+    background-image: linear-gradient(180deg, white 50%, red 50%);
 }
 
 #typeSelector {
