--- a/films/style.css
+++ b/films/style.css
@@ -1,4 +1,8 @@
 /* to do: find cool star wars cursor, custom make star wars logos */
+* {
+    margin: 0;
+    box-sizing: border-box;
+}
 
 header {
     background-image: linear-gradient(to bottom,#71a8ba, #EDC9AF, salmon, #000);
@@ -12,7 +16,11 @@ header {
     flex-wrap: wrap;
     justify-content: space-evenly;
 
-    
+}
+
+header h1 {
+    margin-top: 3rem;
+    margin-left: 5rem;
 }
 
 
@@ -21,6 +29,7 @@ header {
     max-height: 150px;
     margin-right: 20px;
     margin-top: 20px;
+    margin-left: 2rem;
 }
 
 img {
@@ -29,13 +38,13 @@ img {
 
 figure {
     background-color: #FFD700;
+    margin: 2rem;
 }
 
 figure img {
     border: 18px solid #EDC9AF;
  
 }
-
 
 
 figcaption {
@@ -53,12 +62,13 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin: none;
 }
 
 footer {
     display: flex;
     justify-content: center;
     background-image: linear-gradient(to top, #EDC9AF, #000);
-    color: #010;
+    color: #222;
     font-family: monospace;
 }
