added years ot sw films page using index slicing

--- a/films/style.css
+++ b/films/style.css
@@ -50,7 +50,7 @@ figure img {
 figcaption {
     color: #111;
     text-align: center;
-    font-size: x-large;
+    font-size: large;
     font-style: italic;
     font-family: 'Anton', sans-serif;
 
