final edits, added link to port on each page

--- a/Congress/style.css
+++ b/Congress/style.css
@@ -111,6 +111,11 @@ button:hover {
     background-color: white;
     transform: scale(1.1);
     color: blue;
+    cursor: pointer;
+}
 
+#portLink {
+    color: red;
+}
 
 /* make button expand */
