--- a/pokemon/style.css
+++ b/pokemon/style.css
@@ -16,15 +16,15 @@
 }
 
 button {
-    background-image: linear-gradient(180deg, red 50%, white 50%);
-    color: black;
+    background-image: linear-gradient(180deg, red 35%, black, white);
+    color: white;
     font-family: 'Permanent Marker', cursive;
     font-size: large;
 }
 
 button:hover {
     transform: scale(1.2);
-    background-image: linear-gradient(180deg, white 50%, red 50%);
+    background-image: linear-gradient(180deg, white, black, red);
     cursor: pointer;
 }
 
@@ -51,6 +51,10 @@ header h2 {
     font-size: xx-large;
 }
 
+main {
+    min-height: 100vh;
+}
+
 .card {
     width: 100%;
     height: 100%;
@@ -71,7 +75,6 @@ header h2 {
 .card.is-flipped {
     transform: rotate3d(0, 1000, 90, 180deg);
     box-shadow:  10px 10px 5px grey;
-    
 }
 
 .front {
